--- a/src/main/webapp/ex01_book.html
+++ b/src/main/webapp/ex01_book.html
@@ -12,6 +12,7 @@
                 align-items: center;
                 background-color: #3d4052;
                 color: red;
+                text-shadow: 2px 2px 4px black;
             }
 
             .wrap {
@@ -38,6 +39,7 @@
                 font-size: 15px;
                 cursor: pointer;
                 color: red;
+                text-shadow: 2px 2px 4px black;
                 background-color: rgba(0, 0, 0, 0);
                 border: 4px solid;
                 border-radius: 10px;
@@ -61,7 +63,15 @@
             <h2>도서검색 시스템</h2>
             <form action="ex01_Book.jsp" method="post">
                 <input type="text" name="publisher" placeholder="출판사명을 입력하세요...">
-                <input type="submit" value="제출" onclick=" confirm('정말로, 진짜로 검색...하시겠습니까?');">
+                <input
+                        type="submit" value="제출" onclick="
+                        if (confirm('정말로, 진짜로 검색...하시겠습니까?')) {
+                            if (confirm('진심으로,,, 검색하시겠습니까?')) {
+                                return true;
+                            }
+                         }
+                        return false;"
+                >
             </form>
         </div>
         <script>
